[gd_scene load_steps=8 format=3 uid="uid://5sw605gs0sjl"]

[ext_resource type="Texture2D" uid="uid://bq0fbamyl8w8q" path="res://assets/textures/bg.png" id="1_mgcnx"]
[ext_resource type="Script" path="res://scenes/game.gd" id="1_ylurs"]
[ext_resource type="PackedScene" uid="uid://b3o3gjc6orb3c" path="res://scenes/player.tscn" id="2_3tq2c"]
[ext_resource type="PackedScene" uid="uid://c6epby7et206y" path="res://scenes/enemy_spawner.tscn" id="3_0083h"]
[ext_resource type="PackedScene" uid="uid://bf4echj700cpv" path="res://scenes/hud.tscn" id="5_jln1e"]
[ext_resource type="AudioStream" uid="uid://bhsg8ruoes2ti" path="res://assets/audio/hit.wav" id="6_dtd2k"]
[ext_resource type="AudioStream" uid="uid://tu1gxx12604c" path="res://assets/audio/explode.wav" id="7_wxc8e"]

[node name="Game" type="Node2D"]
script = ExtResource("1_ylurs")

[node name="Background" type="TextureRect" parent="."]
z_index = -100
offset_right = 1294.0
offset_bottom = 738.0
texture = ExtResource("1_mgcnx")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Player" parent="." instance=ExtResource("2_3tq2c")]
position = Vector2(115, 361)

[node name="EnemySpawner" parent="." instance=ExtResource("3_0083h")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("5_jln1e")]
metadata/_edit_use_anchors_ = true

[node name="EnemyHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_dtd2k")

[node name="PlayerExplodesSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_wxc8e")

[connection signal="tookDamage" from="Player" to="." method="_on_player_took_damage"]
[connection signal="enemySpawned" from="EnemySpawner" to="." method="_on_enemy_spawner_enemy_spawned"]
[connection signal="pathEnemySpawned" from="EnemySpawner" to="." method="_on_enemy_spawner_path_enemy_spawned"]
